crates/gridwell-writer-latex/tests/snapshots/snapshots__footnote-in-stub.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{ll}
\toprule
Country & GDP \\
\midrule
Atlantis\textsuperscript{*} & N/A \\
Utopia & 999 \\
\bottomrule
\end{tabular}

\textsuperscript{*} Fictional; illustrative only.\\
