crates/gridwell-writer-latex/tests/snapshots/snapshots__header-only-empty-body.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
{\large\bfseries Empty}\\
\begin{tabular}{lll}
\toprule
A & B & C \\
\midrule
\bottomrule
\end{tabular}
