crates/gridwell-writer-latex/tests/snapshots/snapshots__hidden-columns.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{ll}
\toprule
Visible 1 & Visible 2 \\
\midrule
a & b \\
c & d \\
\bottomrule
\end{tabular}
