crates/gridwell-writer-latex/tests/snapshots/snapshots__line-breaks.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{ll}
\toprule
Name & Address \\
\midrule
HQ & \begin{tabular}[t]{@{}l@{}}123 Main St\\Suite 100\\Anytown\end{tabular} \\
\bottomrule
\end{tabular}
