crates/gridwell-writer-latex/tests/snapshots/snapshots__long-word-wrap.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{p{75pt}p{90pt}}
\toprule
Label & Token \\
\midrule
URL & https://example.com/very/long/path/that/should/not/break/nicely?query=1 \\
\bottomrule
\end{tabular}
